@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: unixWm.test,v 1.18 2002/06/14 22:52:04 hobbs Exp $
+# RCS: @(#) $Id: unixWm.test,v 1.19 2002/06/22 10:13:26 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -353,7 +353,7 @@ test unixWm-8.9 {icon windows} {nonPortable} {
     lappend result [winfo ismapped .icon] [wm state .icon]
 } {icon 1 0 0 withdrawn 1 normal}
 
-test unixWm-59.1 {test for memory leaks} {
+test unixWm-8.10.1 {test for memory leaks} {
     wm title .t "This is a long long long long long long title"
     wm title .t "This is a long long long long long long title"
     wm title .t "This is a long long long long long long title"
@@ -364,7 +364,7 @@ test unixWm-59.1 {test for memory leaks} {
     wm title .t "This is a long long long long long long title"
     set x 1
 } 1
-test unixWm-59.2 {test for memory leaks} {
+test unixWm-8.10.2 {test for memory leaks} {
     wm group .t .
     wm group .t .
     wm group .t .
@@ -888,7 +888,7 @@ test unixWm-24.3 {Tk_WmCmd procedure, "iconmask" option} {
 
 test unixWm-25.1 {Tk_WmCmd procedure, "iconname" option} {
     list [catch {wm icon .t} msg] $msg
-} {1 {unknown or ambiguous option "icon": must be aspect, client, command, deiconify, focusmodel, frame, geometry, grid, group, iconbitmap, iconify, iconmask, iconname, iconposition, iconwindow, maxsize, minsize, overrideredirect, positionfrom, protocol, resizable, sizefrom, stackorder, state, title, transient, or withdraw}}
+} {1 {unknown or ambiguous option "icon": must be aspect, attributes, client, command, deiconify, focusmodel, frame, geometry, grid, group, iconbitmap, iconify, iconmask, iconname, iconposition, iconwindow, maxsize, minsize, overrideredirect, positionfrom, protocol, resizable, sizefrom, stackorder, state, title, transient, or withdraw}}
 test unixWm-25.2 {Tk_WmCmd procedure, "iconname" option} {
     list [catch {wm iconname .t 12 13} msg] $msg
 } {1 {wrong # arguments: must be "wm iconname window ?newName?"}}
@@ -1286,7 +1286,7 @@ test unixWm-38.3 {Tk_WmCmd procedure, "withdraw" option} {
 
 test unixWm-39.1 {Tk_WmCmd procedure, miscellaneous} {
     list [catch {wm unknown .t} msg] $msg
-} {1 {unknown or ambiguous option "unknown": must be aspect, client, command, deiconify, focusmodel, frame, geometry, grid, group, iconbitmap, iconify, iconmask, iconname, iconposition, iconwindow, maxsize, minsize, overrideredirect, positionfrom, protocol, resizable, sizefrom, stackorder, state, title, transient, or withdraw}}
+} {1 {unknown or ambiguous option "unknown": must be aspect, attributes, client, command, deiconify, focusmodel, frame, geometry, grid, group, iconbitmap, iconify, iconmask, iconname, iconposition, iconwindow, maxsize, minsize, overrideredirect, positionfrom, protocol, resizable, sizefrom, stackorder, state, title, transient, or withdraw}}
 
 catch {destroy .t}
 catch {destroy .icon}
@@ -2403,22 +2403,19 @@ test unixWm-59.3 {exit processing} {
     list $error $msg
 } {0 {}}
 
+test unixWm-60.1 {wm attributes} {
+    destroy .t
+    toplevel .t
+    wm attributes .t
+} {}
+test unixWm-60.2 {wm attributes} {
+    destroy .t
+    toplevel .t
+    list [catch {wm attributes .t -foo} msg] $msg
+} {1 {wrong # arguments: must be "wm attributes window"}}
 
 # cleanup
 catch {destroy .t}
 catch {removeFile script}
 ::tcltest::cleanupTests
 return
-
-
-
-
-
-
-
-
-
-
-
-
-
